kubernetes/04-backend.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
  namespace: reels-chat
spec:
  selector:
    app: backend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3001
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: reels-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        # Image sẽ được cập nhật bởi Jenkins pipeline
        image: 476114143297.dkr.ecr.ap-southeast-1.amazonaws.com/reels-chat/backend:latest
        ports:
        - containerPort: 3001
        readinessProbe:
          httpGet:
            path: /healthz
            port: 3001
          initialDelaySeconds: 3
          periodSeconds: 10
        livenessProbe:
          httpGet:
            path: /healthz
            port: 3001
          initialDelaySeconds: 10
          periodSeconds: 20
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
