kubernetes/05-frontend.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-svc
  namespace: reels-chat
spec:
  selector:
    app: frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: reels-chat
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        # Thay thế image này bằng ECR repo của bạn trong pipeline
        image: nginx:stable-alpine
        ports:
        - containerPort: 80
